# oc-rsync

./: .gitattributes  .gitignore  AGENTS.MD  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FLAKES.md  LICENSE  LICENSE-MIT  Makefile  README.md  SECURITY.md  build.rs  codecov.yml  fuzz
.cargo/: config.toml
.rpm/: oc-rsyncd.conf  oc-rsyncd.service  oc-rsyncd.systemd.conf
crates/checksums/: Cargo.toml
crates/checksums/benches/: rolling.rs
crates/checksums/src/: lib.rs  rolling.rs  strong.rs
crates/checksums/tests/: golden.rs  md4.rs  rolling_prop.rs  rolling_props.rs  rsync.rs  strong_prop.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/resources/: rsync-help-80.txt  rsync-version.txt
crates/cli/src/: argparse.rs  branding.rs  client.rs  daemon.rs  exec.rs  formatter.rs  lib.rs  options.rs  print.rs  probe.rs  session.rs  transport_factory.rs  utils.rs  validate.rs  version.rs
crates/cli/src/argparse/: builder.rs  flags.rs  mod.rs  validation.rs
crates/cli/src/client/: args.rs  exec.rs  mod.rs  run.rs
crates/cli/src/exec/: mod.rs  privileges.rs  transfer.rs
crates/cli/src/exec/transfer/: remote_remote.rs
crates/cli/src/utils/: mod.rs
crates/cli/tests/: arg_order.rs  arg_order_help.rs  block_size.rs  branding.rs  checksum.rs  cli_parity.rs  compress_level.rs  drive_letters.rs  flag_precedence.rs  golden.rs  help.rs  help_formatting.rs  iconv.rs  logging_flags.rs  multiple_sources.rs  non_utf8_path.rs  options_block_size.rs  options_validation.rs  progress_stats.rs  remote_spec.rs  stderr.rs  version.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/fixtures/: oc-rsync-version-tail-lz4.txt  oc-rsync-version-tail.txt  rsync-version.txt
crates/cli/tests/snapshots/: help__help_columns_120.snap  help__help_columns_80.snap  progress_stats__progress_parity.snap  progress_stats__stats_parity.snap
crates/compress/: Cargo.toml
crates/compress/src/: lib.rs  lz4.rs  mod.rs  zlib.rs  zstd.rs
crates/compress/tests/: codecs.rs  large.rs  zlib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: auth.rs  config.rs  lib.rs  os.rs  service.rs
crates/daemon/src/config/: mod.rs  model.rs  parser.rs  validator.rs
crates/daemon/tests/: config.rs  no_token.rs  parse_args.rs  parse_auth_token.rs  sequential_connections.rs
crates/engine/: Cargo.toml
crates/engine/benches/: compress.rs  large_files.rs  preallocate.rs  rolling.rs
crates/engine/src/: batch.rs  block.rs  cdc.rs  cleanup.rs  delta.rs  flist.rs  io.rs  lib.rs  receiver.rs  remote.rs  sender.rs  session.rs  xattrs.rs
crates/engine/src/docs/: io.md
crates/engine/src/receiver/: apply.rs  metadata.rs  mod.rs  state.rs
crates/engine/src/session/: mod.rs  run.rs  setup.rs
crates/engine/tests/: acls.rs  append.rs  attrs.rs  auto_tmp.rs  backup.rs  batch_encoding.rs  batch_replay.rs  block_size.rs  cdc.rs  checksum.rs  cleanup.rs  compress.rs  create_dst.rs  delete.rs  delete_errors.rs  delta_prop.rs  filter.rs  flist.rs  fuzzy.rs  links.rs  max_delete.rs  missing_args.rs  open_noatime.rs  permissions.rs  preallocate.rs  progress.rs  receiver.rs  remove_source.rs  resume.rs  specials.rs  streaming.rs  update.rs  upstream_batch.rs  write_batch.rs  write_devices.rs  xattrs.rs
crates/engine/tests/tests/: mod.rs
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: filter_parser.rs  filters.rs  filters_merge_fuzz.rs  filters_parse_fuzz.rs  protocol_frame_decode_fuzz.rs
crates/fuzz/src/: lib.rs
crates/logging/: Cargo.toml
crates/logging/src/: flags.rs  formatter.rs  json_format.rs  lib.rs  sink.rs  subscriber.rs  util.rs
crates/logging/tests/: directive_parse_error.rs  escape_path.rs  formatter.rs  info_flags.rs  journald.rs  json_format.rs  levels.rs  log_file.rs  log_file_error.rs  parse_escapes.rs  subscriber_builder.rs  syslog.rs
crates/meta/: Cargo.toml
crates/meta/docs/unix/acl/: acl_to_io.md  decode_acl.md  encode_acl.md  mod.md  read_acl.md  read_acl_inner.md  remove_default_acl.md  should_ignore_acl_error.md  store_fake_super_acl.md  supports.md  write_acl.md
crates/meta/src/: lib.rs  parse.rs  stub.rs  types.rs  unix.rs  windows.rs
crates/meta/src/unix/: acl.rs  apply.rs  mod.rs  xattr.rs
crates/meta/src/unix/docs/: acl_to_io.md  acls_supported.md  apply_access_acl_if_nontrivial.md  apply_default_acl_option.md  decode_acl.md  encode_acl.md  is_trivial_acl.md  maybe_store_fake_super.md  read_acl.md  read_acl_inner.md  remove_default_acl.md  should_ignore_acl_errno.md  should_ignore_acl_error.md  store_fake_super_acl.md  write_acl.md
crates/meta/src/windows/: mod.rs
crates/meta/tests/: acl_codec.rs  acl_gid.rs  acl_prune.rs  acl_roundtrip.rs  apply.rs  chmod.rs  chown_nonroot.rs  common.rs  fake_super.rs  gid_table.rs  id_map.rs  non_unix_stub.rs  numeric_ids_nonroot.rs  roundtrip.rs  uid_table.rs
crates/transport/: Cargo.toml
crates/transport/src/: config.rs  daemon.rs  factory.rs  lib.rs  rate.rs  ssh.rs  stdio.rs  tcp.rs  temp.rs
crates/transport/src/ssh/: io.rs  mod.rs  session.rs  spawn.rs
crates/transport/tests/: blocking_io.rs  bwlimit.rs  config.rs  factory.rs  hosts.rs  local_pipe.rs  pipe.rs  raii_cleanup.rs  reject.rs  retry.rs  sockopts.rs  ssh_backpressure.rs  ssh_capabilities.rs  ssh_max_frame.rs  ssh_process_cleanup.rs  ssh_stderr_cap.rs  ssh_stdio.rs  ssh_unknown_host.rs  tcp.rs
docs/: FEATURES.md  UPSTREAM.md  api_mapping.md  architecture.md  cli-help.txt  cli.md  compat_matrix.md  compatibility.md  coverage_exclusions.md  daemon.md  differences.md  feature_matrix.md  filters.md  fixtures.md  fuzzing.md  gaps.md  installation.md  interop-grid.md  modern.md  oc-rsyncd.conf.scd  oc-rsyncd.md  (+5 more)
fuzz/: Cargo.toml
fuzz/corpus/daemon_auth_token_parser/: valid
fuzz/corpus/filters_merge_fuzz/: new_syntax
fuzz/corpus/filters_parse_fuzz/: new_syntax
fuzz/fuzz_targets/: daemon_auth_token_parser.rs  dirent_parser.rs  filter_parser.rs  filters.rs  filters_dir_merge_fuzz.rs  filters_merge_fuzz.rs  filters_parse_fuzz.rs  manifest_parser.rs  protocol_frame_decode_fuzz.rs
fuzz/src/: lib.rs
(+468 files in other folders)
