[workspace]
members = [
    "crates/protocol",
    "crates/checksums",
    "crates/filelist",
    "crates/filters",
    "crates/walk",
    "crates/meta",
    "crates/compress",
    "crates/engine",
    "crates/transport",
    "crates/daemon",
    "crates/cli",
    "bin/oc-rsync",
    "crates/logging",
]
resolver = "2"

[package]
name = "oc-rsync"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "crates/protocol" }
checksums = { path = "crates/checksums" }
engine = { path = "crates/engine" }
filters = { path = "crates/filters" }
compress = { path = "crates/compress" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap_complete = "4"
rustc_lexer = "0.1"
logging = { path = "crates/logging" }
tracing = "0.1"
filetime = "0.2"
clap = { version = "4" }
oc-rsync-cli = { path = "crates/cli" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "fs"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "2"
nix = { version = "0.27", features = ["user", "fs", "process"] }
xattr = "1.3"
posix-acl = "1.2"
transport = { path = "crates/transport" }
shell-words = "1.1"
wait-timeout = "0.2"
users = "0.11"
meta = { path = "crates/meta" }
daemon = { path = "crates/daemon" }
sha2 = "0.10"
encoding_rs = "0.8"

[[bin]]
name = "oc-rsync"
path = "bin/oc-rsync/src/main.rs"

[[bin]]
name = "flag_matrix"
path = "tools/flag_matrix.rs"

[[bin]]
name = "gen-completions"
path = "tools/gen_completions.rs"
required-features = ["cli"]

[[bin]]
name = "strip-rs-comments"
path = "tools/strip_rs_comments.rs"

[features]
default = []
xattr = ["engine/xattr", "oc-rsync-cli/xattr", "meta/xattr"]
acl = ["engine/acl", "oc-rsync-cli/acl", "meta/acl"]
# Enables CLI-only tools
cli = []
# Enables AVX-512 implementations requiring a nightly toolchain
nightly = ["checksums/nightly", "compress/nightly"]

[profile.release]
# Keep release sane for local builds; CI will use [profile.maxspeed]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
debug = false
overflow-checks = false
incremental = false

# Ultra-optimized profile (CI will use this)
[profile.maxspeed]
inherits = "release"
opt-level = 3           # maximum LLVM optimizations
lto = "fat"             # best runtime perf (slower link, larger bin)
codegen-units = 1       # better inlining/opts across crates
panic = "abort"         # remove unwinding paths
debug = false
overflow-checks = false
incremental = false
