[package]
name = "fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
members = []

[dependencies]
libfuzzer-sys = "0.4"
protocol = { path = "../crates/protocol" }
filters = { path = "../crates/filters" }
walk = { path = "../crates/walk" }
oc-rsync-cli = { path = "../crates/cli" }
tempfile = "3"
engine = { path = "../crates/engine" }

[[bin]]
name = "protocol_frame_decode_fuzz"
path = "fuzz_targets/protocol_frame_decode_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filters_parse_fuzz"
path = "fuzz_targets/filters_parse_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filters"
path = "fuzz_targets/filters.rs"
test = false
doc = false

[[bin]]
name = "filters_merge_fuzz"
path = "fuzz_targets/filters_merge_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filter_parser"
path = "fuzz_targets/filter_parser.rs"
test = false
doc = false

[[bin]]
name = "filters_dir_merge_fuzz"
path = "fuzz_targets/filters_dir_merge_fuzz.rs"
test = false
doc = false

[[bin]]
name = "dirent_parser"
path = "fuzz_targets/dirent_parser.rs"
test = false
doc = false

[[bin]]
name = "daemon_auth_token_parser"
path = "fuzz_targets/daemon_auth_token_parser.rs"
test = false
doc = false

[[bin]]
name = "manifest_parser"
path = "fuzz_targets/manifest_parser.rs"
test = false
doc = false
