[package]
name = "checksums"
version = "0.1.0"
edition = "2021"

[dependencies]
md-5 = "0.10"
sha1 = "0.10"
md4 = "0.10"

[features]
default = []
# AVX-512 implementations (requires nightly Rust)
nightly = []

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "rolling"
harness = false
