[package]
name = "checksums"
version = "0.1.0"
edition = "2021"

[dependencies]
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[features]
default = []
# AVX-512 implementations (requires nightly Rust)
nightly = []

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", default-features = false }
tempfile = "3"

[[bench]]
name = "rolling"
harness = false
