[package]
name = "checksums"
version = "0.1.0"
edition = "2024"

[dependencies]
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rustversion = "1"

[features]
default = []
# AVX-512 implementations (requires nightly Rust)
nightly = []

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.5", default-features = false }
tempfile = "3"
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustversion, values("nightly"))'] }

[[bench]]
name = "rolling"
harness = false
