[package]
name = "oc-rsync-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
engine = { path = "../engine" }
protocol = { path = "../protocol" }
filters = { path = "../filters" }
transport = { path = "../transport" }
compress = { path = "../compress" }
shell-words = "1.1"
meta = { path = "../meta" }
daemon = { path = "../daemon" }
logging = { path = "../logging" }
tracing = "0.1"
encoding_rs = "0.8"
textwrap = "0.16"
time = { version = "0.3", features = ["macros", "parsing"] }
regex = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user", "fs"] }
users = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
serial_test = "2"

[features]
default = []
lz4 = ["engine/lz4", "compress/lz4"]

