[package]
name = "oc-rsync-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
oc-rsync-core = { path = "../core" }
clap = { version = "4.5.47", features = ["derive", "env"] }
shell-words = "1.1"
logging = { path = "../logging" }
tracing = "0.1"
encoding_rs = "0.8"
textwrap = "0.16"
time = { version = "0.3", features = ["macros", "parsing"] }
regex = "1"
once_cell = "1"
scopeguard = "1"
transport = { path = "../transport" }
daemon = { path = "../daemon" }
engine = { path = "../engine", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["user", "fs"] }
users = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
serial_test = "2"
filetime = "0.2"
xattr = "1.3"

[features]
default = []
dump-help = []

[build-dependencies]
time = { version = "0.3", default-features = false, features = ["std"] }

