[package]
name = "compress"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
lz4_flex = { version = "0.11", optional = true }

[features]
default = ["zlib", "zstd"]
zlib = ["dep:flate2"]
zstd = ["dep:zstd"]
lz4 = ["dep:lz4_flex"]
# AVX-512 implementations (requires nightly Rust)
nightly = []
