[package]
name = "oc-rsync-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
meta = { path = "../meta", default-features = false, features = ["acl"] }
filters = { path = "../filters" }
protocol = { path = "../protocol" }
compress = { path = "../compress" }
checksums = { path = "../checksums" }
engine = { path = "../engine", default-features = false }
