[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
transport = { path = "../transport" }
nix = { version = "0.30.1", features = ["user", "fs", "process"] }
protocol = { path = "../protocol" }
ipnet = "2"
logging = { path = "../logging" }
meta = { path = "../meta" }

[target.'cfg(unix)'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
tempfile = "3"
