[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
checksums = { path = "../checksums", features = ["blake3"] }
walk = { path = "../walk" }
filters = { path = "../filters" }
compress = { path = "../compress" }
nix = { version = "0.27", features = ["user", "fs"] }
meta = { path = "../meta", default-features = false }
blake3 = "1"

[dev-dependencies]
tempfile = "3"
compress = { path = "../compress" }
criterion = { version = "0.5", default-features = false }
filetime = "0.2"
xattr = "1.3"
posix-acl = "1.2"

[[bench]]
name = "large_files"
harness = false

[features]
default = []
lz4 = ["compress/lz4"]
xattr = ["meta/xattr"]
acl = ["meta/acl"]
