[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
checksums = { path = "../checksums", default-features = false }
walk = { path = "../walk" }
filters = { path = "../filters" }
compress = { path = "../compress" }
nix = { version = "0.27", features = ["user", "fs"] }
meta = { path = "../meta", default-features = false }
blake3 = "1"
fastcdc = "3.2"
logging = { path = "../logging" }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
compress = { path = "../compress" }
criterion = { version = "0.5", default-features = false }
filetime = "0.2"
xattr = "1.3"
posix-acl = "1.2"

[[bench]]
name = "large_files"
harness = false

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "preallocate"
harness = false

[features]
default = []
lz4 = ["compress/lz4"]
xattr = ["meta/xattr"]
acl = ["meta/acl"]
blake3 = ["checksums/blake3"]
