[package]
name = "engine"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
thiserror = "1"
checksums = { path = "../checksums", default-features = false }
walk = { path = "../walk" }
filters = { path = "../filters" }
compress = { path = "../compress" }
filelist = { path = "../filelist" }
protocol = { path = "../protocol" }
nix = { version = "0.30.1", features = ["user", "fs"] }
meta = { path = "../meta" }
logging = { path = "../logging" }
libc = "0.2"
memmap2 = "0.9"
tempfile = "3"
tracing = "0.1"
transport = { path = "../transport" }
posix-acl = { version = "1.2", optional = true }
rand = "0.8"
md4 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
compress = { path = "../compress" }
criterion = { version = "0.5", default-features = false }
encoding_rs = "0.8"
filetime = "0.2"
proptest = "1.4"
xattr = "1.3"
caps = "0.5"

[[bench]]
name = "large_files"
harness = false

[[bench]]
name = "rolling"
harness = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "preallocate"
harness = false

[features]
default = ["zstd", "xattr", "acl"]
zstd = []
xattr = []
acl = ["meta/acl", "posix-acl"]
