[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
protocol = { path = "../crates/protocol" }
filters = { path = "../crates/filters" }

[[bin]]
name = "protocol_frame_decode_fuzz"
path = "fuzz_targets/protocol_frame_decode_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filters_parse_fuzz"
path = "fuzz_targets/filters_parse_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filters"
path = "fuzz_targets/filters.rs"
test = false
doc = false

[[bin]]
name = "filters_merge_fuzz"
path = "fuzz_targets/filters_merge_fuzz.rs"
test = false
doc = false

[[bin]]
name = "filter_parser"
path = "fuzz_targets/filter_parser.rs"
test = false
doc = false
