[package]
name = "logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4.5.47", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["syslog", "journald"]
syslog = []
journald = []

