[package]
name = "meta"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.27", features = ["fs", "user"] }
filetime = "0.2"
libc = "0.2"
users = "0.11"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dependencies.xattr]
version = "1.5"
optional = true

[dependencies.posix-acl]
version = "1.2"
optional = true

[features]
default = []
xattr = ["dep:xattr"]
acl = ["dep:posix-acl"]

[dev-dependencies]
tempfile = "3"
