[package]
name = "meta"
version = "0.1.0"
edition = "2021"

[dependencies]
filetime = "0.2"
libc = "0.2"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["fs", "user"] }
users = "0.11"
xattr = "1.5"
posix-acl = { version = "1.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[dev-dependencies]
tempfile = "3"

[features]
default = []
acl = ["posix-acl"]
