[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
compress = { path = "../compress" }
nix = { version = "0.30.1", default-features = false, features = ["poll", "fs"] }
socket2 = { version = "0.5", features = ["all"] }
checksums = { path = "../checksums" }
ipnet = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
