[package]
name = "transport"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
nix = { version = "0.30.1", default-features = false, features = ["poll", "fs"] }
socket2 = { version = "0.5", features = ["all"] }
ipnet = "2"
tracing = "0.1"
oc-rsync-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
